# PlaydateCTemplate

./: CMakeLists.txt  LICENSE.md  README.md  Rakefile  compile_flags.txt
.github/workflows/: main.yml
Source/: main.lua
src/: main.c
test/: test_main.c
